[package]
name = "enum-utils"
version = "0.1.1"
authors = ["Dylan MacKenzie <ecstaticmorse@gmail.com>"]
edition = "2018"

description = "A set of useful proc macros for enums"
repository = "https://github.com/ecstatic-morse/enum-utils"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]

[badges.azure-devops]
project = "ecstaticmorse/enum-utils"
pipeline = "enum-utils"

[workspace]
members = [
  "bench",
  "from-str",
]

[lib]
proc-macro = true

[dependencies]
failure = "0.1.5"
proc-macro2 = "1.0"
quote = "1.0"
enum-utils-from-str = { path = "from-str", version = "0.1.0" }
serde_derive_internals = "0.24.1"
syn = { version = "1.0", features = ["extra-traits"] }
